# uboot-tftp

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt  script.py
config/: openipc.toml
examples/: config.toml  script.py
scripts/: openipc.py
src/openipc_tftp/: __init__.py  actions.py  cli.py  config.py  protocol.py  providers.py  scripted.py  server.py  sessions.py  test_client.py  uboot.py  ubootterm.py  uploads.py
src/uboot_tftp/: __init__.py  check_cli.py  cli.py  config.py  flashplan.py  github_assets.py  openipc.py  openipc.toml  openipc_tftp.py  partitions.py  scripted.py  server.py  sessions.py  tools.py  ubootcmds.py  ubootenv.py  ubootops.py  ubootscript.py
tests/: test_check_cli.py  test_cli.py  test_flashplan.py  test_github_assets.py  test_openipc_manifest.py  test_openipc_partitions.py  test_openipc_wrapper.py  test_partitions.py  test_protocol.py  test_scripted.py  test_server.py  test_sessions.py  test_test_client.py  test_uboot.py  test_ubootcmds.py  test_ubootenv.py  test_ubootenv_cli.py  test_ubootops.py  test_ubootscript.py  test_ubootterm.py  test_uploads.py
