[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uboot-tftp"
version = "0.1.0"
description = "Reusable dynamic-content extensions for tftpy."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Tiny Labs" }
]
keywords = ["tftp", "tftpy", "netboot", "openipc"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Boot",
  "Topic :: Utilities",
]
dependencies = [
  "tftpy>=0.8.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
uboot-tftp = "uboot_tftp.cli:main"
openipc-tftp = "uboot_tftp.openipc_tftp:main"
uboot-tftp-check = "uboot_tftp.check_cli:main"
uboot-tftp-client = "uboot_tftp.test_client:main"
uboot-tftp-env = "uboot_tftp.ubootenv_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uboot_tftp = ["py.typed", "openipc.py", "openipc.toml"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
